--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Orbitron:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto+Serif:ital,opsz,wght@1,8..144,100&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -14,6 +17,8 @@
     justify-content: space-between;
     
 }
+
+
 
 .logo{
     width: 20%;
@@ -62,3 +67,62 @@
 .search-icon{
     height: 20px;
 }
+
+
+/* movies css */
+
+.movies{
+    width: 100%;
+    padding: 50px 5%;
+    background-color: lightgrey;
+}
+
+.movie{
+    width: 20%;
+    height: 500px;
+    background-color: red;
+    overflow: hidden;
+    border-radius: 10px;
+    position: relative;
+
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    transition: 0.6s;
+    cursor: pointer;
+}
+
+.overlay:hover{
+    opacity: 1;
+
+}
+
+.video{
+    width: 100%;
+    height: 50%;
+    /* background-color: yellow; */
+}
+
+
+.details{
+    width: 100%;
+    height: 50%;
+    /* background-color: blue; */
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+
+
+.poster{
+    width: 100%;
+}
+
