--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@
     width: 100%;
     padding: 50px 5%;
     background-color: lightgrey;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 6%;
 }
 
 .movie{
